@@ -91,16 +91,16 @@ class RevelationXML(base.DataHandler):
 					continue
 
 				elif child.nodeName == "name":
-					e.name = unicode(util.dom_text(child).encode("iso-8859-1"), "utf-8")
+					e.name = util.dom_text(child)
 
 				elif child.nodeName == "description":
-					e.description = unicode(util.dom_text(child).encode("iso-8859-1"), "utf-8")
+					e.description = util.dom_text(child)
 
 				elif child.nodeName == "updated":
 					e.updated = int(util.dom_text(child))
 
 				elif child.nodeName == "field":
-					e[self.__lookup_field(child.attributes["id"].nodeValue)] = unicode(util.dom_text(child).encode("iso-8859-1"), "utf-8")
+					e[self.__lookup_field(child.attributes["id"].nodeValue)] = util.dom_text(child)
 
 				elif child.nodeName == "entry":
 					if type(e) != entry.FolderEntry:
@@ -183,7 +183,7 @@ class RevelationXML(base.DataHandler):
 			xml += tabs + "</entry>\n"
 
 		if level == 0:
-			header = "<?xml version=\"1.0\" encoding=\"iso-8859-1\" ?>\n"
+			header = "<?xml version=\"1.0\" encoding=\"utf-8\" ?>\n"
 			header += "<revelationdata version=\"%s\" dataversion=\"1\">\n" % config.VERSION
 			footer = "</revelationdata>\n"
 
@@ -194,6 +194,11 @@ class RevelationXML(base.DataHandler):
 
 	def import_data(self, input, password = None):
 		"Imports data from a data stream to an entrystore"
+
+		# Workaround for incorrect encoding in files generated by version 0.4.0.
+		# To be removed in version 0.5.0.
+		if input[:44] == '<?xml version="1.0" encoding="iso-8859-1" ?>':
+			input = '<?xml version="1.0" encoding="utf-8" ?>' + input[44:]
 
 		RevelationXML.check(self, input)
 
