@@ -7,14 +7,14 @@ New features:
 - ask user to reload file if it is changed outside revelation
 
 Bugfixes:
+- use correct encoding in data files
+- workaround for incorrect data file encoding (as generated by 0.4.0)
 - make undo actually work for edit actions
 - don't crash when redoing an undone edit action
 - don't crash when unable to save file (wrong permissions etc)
 - workaround for gnome-python 2.9.x crasher bug in the session client
 - prefs, password generator and search dialogs are no longer modal
 - display non-ascii characters in filenames correctly
-- handle non-ascii characters correctly (workaround for incorrect
-  encoding in data files)
 
 
 2005-02-08: Revelation 0.4.0
