@@ -10,7 +10,9 @@ Revelation changelog
 
 	* display non-ascii characters in filenames correctly
 
-	* workaround for incorrect encoding of non-ascii characters
+	* use correct encoding (utf-8, not iso-8859-1) in data files
+
+	* workaround for files with incorrect encoding (generated by 0.4.0)
 
 2005-02-09  Erik Grinaker <erikg@codepoet.no>
 
